## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

a2b_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

a2b_data_DATA = \
	jag.fnt\
	settings.txt\
	b.txt\
	color.txt\
	g.txt\
	r.txt\
	tree.txt\
	despatch.fail\
	despatch.suc\
	opposition.fail\
	opposition.suc\
	last.txt\
	hiscores.txt

EXTRA_DIST = $(a2b_data_DATA)
