## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

a2b_includedir = $(pkgincludedir)

a2b_include_DATA = \
	CBox.h\
	CButton.h\
	CCheckBox.h\
	CFont.h\
	CGameDevice.h\
	CProgressbar.h\
	CTextButton.h\
	CTextField.h\
	CWidget.h\
	utils.h\
	CLoop.h\
	CSpline.h\
	CColorProducer.h\
	CGame.h\
	CTrack.h\
	CFuzzyVariable.h\
	CTrackGenerator.h\
	CTrain.h\
	CTrainLauncher.h\
	typedefs.h\
	CEvent.h\
	CNode.h\
	CGrow.h\
	CTrainQ.h\
	CMembershipFunction.h\
	CCollision.h\
	CMain.h\
	CMainMenu.h\
	main.h\
	CEdge.h\
	CNetwork.h\
	COutwardTrain.h\
	CReturnTrain.h\
	CLevelBrowser.h\
	CLabel.h\
	CPlay.h\
	CPause.h\
	CPauseMenu.h\
	CLevelComplete.h\
	CLevelCompleteMenu.h\
	CExitLevel.h\
	CExplosion.h\
	HiScore.h\
	CAbout.h\
	clock64.h\
	CMenu.h\
	CProfiler.h\
	CHiScoreTable.h\
	CHiScores.h

EXTRA_DIST = $(a2b_include_DATA)
