## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	-I../include\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	-I../include\
	 -Wall\
	 -g

bin_PROGRAMS = a2b

a2b_SOURCES = \
	CBox.cpp\
	CFont.cpp\
	CGameDevice.cpp\
	CProgressbar.cpp\
	CTextField.cpp\
	CSpline.cpp\
	CColorProducer.cpp\
	CGame.cpp\
	CTrack.cpp\
	CTrain.cpp\
	CCollision.cpp\
	CMain.cpp\
	CMainMenu.cpp\
	CNode.cpp\
	CTrackGenerator.cpp\
	CTrainLauncher.cpp\
	CGrow.cpp\
	CNetwork.cpp\
	CFuzzyVariable.cpp\
	CTrainQ.cpp\
	CMembershipFunction.cpp\
	COutwardTrain.cpp\
	CReturnTrain.cpp\
	CLevelBrowser.cpp\
	CPlay.cpp\
	CPause.cpp\
	CPauseMenu.cpp\
	CLevelComplete.cpp\
	CLevelCompleteMenu.cpp\
	CExitLevel.cpp\
	CExplosion.cpp\
	CHiScoreTable.cpp\
	CHiScores.cpp\
	CAbout.cpp\
	main.cpp

a2b_LDFLAGS = \
	-L../lib

a2b_LDADD = \
	 -lGL -lGLU -lglut -lclock64

